--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 pip install opencv-python
-bashpip install scipy
-bashpip install matplotlib
-bashpip install numpy
+pip install scipy
+pip install matplotlib
+
+pip install numpy
